# headwater-api

./: README.md  pyproject.toml
src/headwater_api/: __main__.py
src/headwater_api/api/: base_api.py  conduit_api.py  curator_api.py  embeddings_api.py  siphon_api.py
src/headwater_api/classes/: __init__.py
src/headwater_api/classes/conduit_classes/: requests.py  responses.py
src/headwater_api/classes/curator_classes/: responses.py
src/headwater_api/classes/embeddings_classes/: requests.py  responses.py
src/headwater_api/classes/server_classes/: exceptions.py  status.py
src/headwater_api/classes/siphon_classes/: embedding_models.py  requests.py  responses.py
src/headwater_api/client/: headwater_client.py
src/headwater_api/clients/: conduit_client.py  curator_client.py  embeddings_client.py
src/headwater_api/curator_classes/: requests.py
src/headwater_api/exceptions/: exceptions.py
src/headwater_api/transport/: headwater_transport.py
tests/client/: test_conduit.py  test_curator.py  test_embeddings.py  test_siphon.py  test_transport.py
