[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "headwater-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbclients",
    "pydantic>=2.12.3"
]

[tool.hatch.build.targets.wheel]
packages = ["src/headwater-api"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/headwater-api/py.typed"]

# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
dbclients = { path = "../dbclients-project", editable = true }
